Sizing and spacing fixes for bio page

--- a/src/index.css
+++ b/src/index.css
@@ -333,12 +333,14 @@ li {
 
 .title-image {
   margin: 0;
+  margin-left: -15%;
 }
 
 .title-image img{
   border-radius: 100px;
   margin-top: 0%;
   margin-left: 4%;
+  max-height: 90%;
 }
 
 .title-text {
@@ -366,25 +368,25 @@ li {
   margin-bottom: 0;
   padding-top: 0;
   padding-bottom: 0;
-  font-size: 60px;
+  font-size: 70px;
 }
 
 .title-1 {
-  margin-left: -20%;
-  margin-top: -1%;
+  margin-left: -25%;
+  margin-top: 0%;
   /* margin-left: 21%; */
 }
 
 .title-2 {
   margin-left: -2%;
-  margin-top: 8%;
+  margin-top: 7%;
   /* margin-right: 20%;
   text-align: right; */
 }
 
 .title-3 {
-  margin-left: -12%;
-  margin-top: 8%;
+  margin-left: -13%;
+  margin-top: 7%;
   /* margin-left: 32%; */
 }
 
@@ -497,14 +499,14 @@ li {
   .title-1 {
     margin-left: -50%;
     margin-top: 1%;
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .title-2 {
     margin-left: -30%;
     margin-top: 1;
     padding-top: 8%;
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .title-3 {
@@ -512,7 +514,7 @@ li {
     margin-top: 1;
     padding-top: 8%;
     padding-bottom: 3%;
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .title-image {
@@ -557,7 +559,7 @@ li {
    }
 
    .navbar {
-    font-size: 1rem;
+    font-size: .75rem;
     margin: 0;
     padding-left: 2%;
     padding-right: 2%;
@@ -565,7 +567,7 @@ li {
 
    .navbar:hover {
     transition: none;
-    font-size: 1rem;
+    font-size: .75rem;
   }
 
    .bio {
